--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
 <!-- your HTML goes here -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Resume</title>
+	<link rel="stylesheet" href="style.css">
+<body>
+<h1 style="text-align: center;">Ruhi Tamanna Alam Sithy</h1>
+<p style="text-align: center;">Modhumita Road,tongi.Dhaka</p>
+<p style="text-align: center;">Mobile No:01750247486</p>
+<p style="text-align: center;">Email:ruhialamsithy@gmail.com</p>
+
+<br></br>
+<div>
+<h2>Personal details</h2>
+<p style="text-align: left;">Date of birth:8 February 1994</p>
+<p style="text-align: left;">Nationality:Bangladeshi</p>
+<p style="text-align: left">Maratial Status:Unmarried</p>
+<br></div>
+
+
+
+
+<h3 style="text-align:left;">Education</h3>
+<table id="tab1" align="left";>
+  <tr>
+    <th>Exam</th>
+    <th>Year</th> 
+    <th>GPA</th>
+    <th>Institute</th>
+  </tr>
+  <tr>
+    <td>SSC</td>
+    <td>2010</td> 
+    <td>5.00</td>
+    <td>Rajshahi Govt. Girls High School</td>
+  </tr>
+  <tr>
+    <td>HSC</td>
+    <td>2012</td> 
+    <td>5.00</td>
+    <td>Rajshahi New Govt. Degree College</td>
+  </tr>
+  <tr>
+    <td>University</td>
+    <td>2014</td> 
+    <td>2.81</td>
+    <td>Independent Universithy,Bangladesh</td>
+  </tr>
+</table>
+<br></br>
+<div>
+
+
+
+
+<br></br>
+<div>
+<h4 style="text-align: left;"> Key strenghts and Competencies:</h4>
+<div>
+<ul style="list-style: decimal-leading-zero;">
+	<li>Strong written and Verebal communications</li>
+	<li>Good Interpersonal skills</li>
+	<li>Willing to do overtime job </li>
+	<li>Good listener</li>
+	<li>Computer literate</li>
+</ul>
+
+<div>
+<h5 style="text-align: left;">Skills</h5>
+<div>
+<ul style="list-style: disc;">
+<li> C++,Java,HTML,CSS</li>
+<li> Microsoft office</li>
+<li> Adobe Photoshop</li>
+<li>Internet browsing and Data finding </li>
+</ul>
+<br></div>
+
