--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,9 @@
           </div> 
 <div>
     <h7>Contact me through facebook</h7>
-<p><a href="https://www.facebook.com/">contact me</a></p>
+<p>
+    <a href="https://www.facebook.com/">contact me</a></p>
+
     
 
 </div>
